settings section WIP

--- a/app/index.html
+++ b/app/index.html
@@ -199,12 +199,9 @@
 <script src="hmo/PharmacyController.js"></script>
 <script src="hmo/HospitalController.js"></script>
 <script src="hmo/StaffController.js"></script>
+<script src="hmo/SettingsController.js"></script>
 
 <!--Custom JS-->
-<!--<script src="assets/js/custom/morphModal.js"></script>-->
-<script>
-</script>
-
 
 </body>
 </html>
