claims roles under work

--- a/app/index.html
+++ b/app/index.html
@@ -200,6 +200,7 @@
 <script src="hmo/HospitalController.js"></script>
 <script src="hmo/StaffController.js"></script>
 <script src="hmo/SettingsController.js"></script>
+<script src="hmo/ReportController.js"></script>
 
 <!--Custom JS-->
 
