roles fixes still going on

--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,16 @@
     <meta name="HandheldFriendly" content="true" />
     <meta name="apple-touch-fullscreen" content="yes" />
     <title data-ng-bind="pageTitle()">HealthPlus - Platform for better Health Management.</title>
+
+    <!--Start of Zopim Live Chat Script-->
+    <script type="text/javascript">
+        window.$zopim||(function(d,s){var z=$zopim=function(c){z._.push(c)},$=z.s=
+                d.createElement(s),e=d.getElementsByTagName(s)[0];z.set=function(o){z.set.
+                _.push(o)};z._=[];z.set._=[];$.async=!0;$.setAttribute("charset","utf-8");
+            $.src="//v2.zopim.com/?4DzwdltRIzkYASqU9fLk8yLIvcG2dnmC";z.t=+new Date;$.
+                    type="text/javascript";e.parentNode.insertBefore($,e)})(document,"script");
+    </script>
+    <!--End of Zopim Live Chat Script-->
     <!-- Google fonts -->
     <link href="http://fonts.googleapis.com/css?family=Lato:300,400,400italic,600,700|Raleway:300,400,500,600,700|Crete+Round:400italic" rel="stylesheet" type="text/css" />
     <!-- Bootstrap -->
@@ -201,6 +211,8 @@
 <script src="hmo/StaffController.js"></script>
 <script src="hmo/SettingsController.js"></script>
 <script src="hmo/ReportController.js"></script>
+<script src="hmo/InboxController.js"></script>
+<script src="hmo/ViewsMessageController.js"></script>
 
 <!--Custom JS-->
 
