--- a/app/index.html
+++ b/app/index.html
@@ -64,6 +64,7 @@
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/custom.css">
     <link rel="stylesheet" href="assets/css/plugins.css">
+    <link rel="stylesheet" href="assets/css/select.css">
     <link rel="stylesheet" href="lib/angular-treasure-overlay-spinner/dist/treasure-overlay-spinner.min.css">
     <!--<link rel="stylesheet" href="assets/css/morphModal.css">-->
     <!-- Packet Theme -->
@@ -161,6 +162,8 @@
 <!-- Angular Slick Carousel -->
 <script src="lib/angular-slick-carousel/dist/angular-slick.min.js"></script>
 
+<script src="lib/angular-file-upload/dist/angular-file-upload.min.js"></script>
+
 <!--Permission-->
 <script src="lib/angular-permission/dist/angular-permission.js"></script>
 <script src="lib/angular-permission/dist/angular-permission-ui.min.js"></script>
@@ -172,6 +175,9 @@
 
 <!--ngMessages-->
 <script src="lib/angular-messages/angular-messages.min.js"></script>
+
+<script src="assets/js/custom/select.js"></script>
+
 
 <!-- Packet Scripts -->
 <script src="assets/js/app.js"></script>
@@ -198,7 +204,7 @@
 <script src="assets/js/directives/landing-header.js"></script>
 <script src="assets/js/directives/ct-crop.js"></script>
 <script src="assets/js/directives/backbone/OnLastRepeat.js"></script>
-<script src="assets/js/directives/backbone/FileUpload.js"></script>
+<!--<script src="assets/js/directives/backbone/FileUpload.js"></script>-->
 
 <!--Services-->
 <script src="assets/js/services/notify.js"></script>
@@ -213,6 +219,7 @@
 <script src="assets/js/services/EnrolleeService.js"></script>
 <script src="assets/js/services/OrganizationService.js"></script>
 <script src="assets/js/services/PlanService.js"></script>
+<script src="assets/js/services/HospitalService.js"></script>
 
 
 <!-- Packet Controllers -->
@@ -236,7 +243,9 @@
 <script src="hmo/ViewsMessageController.js"></script>
 <script src="hmo/ModalController.js"></script>
 <script src="hmo/ImageUploadModal.js"></script>
-<script src="assets/js/custom/ModalInstanceController.js"></script>
+<script src="assets/js/custom/ModalInstanceController.js"></script>CareProviderController
+<script src="hmo/CareProviderController.js"></script>
+
 
 <!--Custom JS-->
 
