-Fixing Plans -Fixing Enrollee Claims -Fixing Dashbaord

--- a/app/index.html
+++ b/app/index.html
@@ -65,6 +65,7 @@
     <link rel="stylesheet" href="assets/css/custom.css">
     <link rel="stylesheet" href="assets/css/plugins.css">
     <link rel="stylesheet" href="assets/css/select.css">
+    <link rel="stylesheet" href="lib/angular-ui-select/dist/select.min.css">
     <link rel="stylesheet" href="lib/angular-treasure-overlay-spinner/dist/treasure-overlay-spinner.min.css">
     <!--<link rel="stylesheet" href="assets/css/morphModal.css">-->
     <!-- Packet Theme -->
@@ -176,6 +177,9 @@
 <!--ngMessages-->
 <script src="lib/angular-messages/angular-messages.min.js"></script>
 
+<script src="lib/angular-ui-select/dist/select.min.js"></script>
+
+
 <script src="assets/js/custom/select.js"></script>
 
 
@@ -220,7 +224,9 @@
 <script src="assets/js/services/OrganizationService.js"></script>
 <script src="assets/js/services/PlanService.js"></script>
 <script src="assets/js/services/HospitalService.js"></script>
-
+<script src="assets/js/services/AilmentService.js"></script>
+<script src="assets/js/services/MedicalRecordService.js"></script>
+<script src="assets/js/services/EnrolleeRecordService.js"></script>
 
 <!-- Packet Controllers -->
 <script src="assets/js/controllers/mainCtrl.js"></script>
@@ -243,12 +249,11 @@
 <script src="hmo/ViewsMessageController.js"></script>
 <script src="hmo/ModalController.js"></script>
 <script src="hmo/ImageUploadModal.js"></script>
-<script src="assets/js/custom/ModalInstanceController.js"></script>CareProviderController
+<script src="assets/js/custom/ModalInstanceController.js"></script>
 <script src="hmo/CareProviderController.js"></script>
-
-
+<script src="hmo/ClaimsModalController.js"></script>
+<script src="hmo/PlansModalController.js"></script>
 <!--Custom JS-->
-
 
 </body>
 </html>
