Fixed NHIS and Claims for enrollee

--- a/app/index.html
+++ b/app/index.html
@@ -227,6 +227,9 @@
 <script src="assets/js/services/AilmentService.js"></script>
 <script src="assets/js/services/MedicalRecordService.js"></script>
 <script src="assets/js/services/EnrolleeRecordService.js"></script>
+<script src="assets/js/services/NhisService.js"></script>
+<script src="assets/js/services/BandService.js"></script>
+<script src="assets/js/services/CodeService.js"></script>
 
 <!-- Packet Controllers -->
 <script src="assets/js/controllers/mainCtrl.js"></script>
