bug fixing still WIP

--- a/app/index.html
+++ b/app/index.html
@@ -230,6 +230,9 @@
 <script src="assets/js/services/NhisService.js"></script>
 <script src="assets/js/services/BandService.js"></script>
 <script src="assets/js/services/CodeService.js"></script>
+<script src="assets/js/services/MailService.js"></script>
+
+
 
 <!-- Packet Controllers -->
 <script src="assets/js/controllers/mainCtrl.js"></script>
@@ -256,6 +259,9 @@
 <script src="hmo/CareProviderController.js"></script>
 <script src="hmo/ClaimsModalController.js"></script>
 <script src="hmo/PlansModalController.js"></script>
+<script src="hmo/EmailImageUploadController.js"></script>
+
+
 <!--Custom JS-->
 
 </body>
