--- a/app/index.html
+++ b/app/index.html
@@ -231,6 +231,7 @@
 <script src="assets/js/services/BandService.js"></script>
 <script src="assets/js/services/CodeService.js"></script>
 <script src="assets/js/services/MailService.js"></script>
+<script src="assets/js/services/HospitalEnrolleeService.js"></script>
 
 
 
